src/snapshots/aidl_parser__ast__tests__type_primitive.snap
---
source: src/ast.rs
expression: "rules::type_(input, &lookup(input))?"

---
Type(
  name: "double",
  kind: Primitive,
  generic_types: [],
  definition: None,
  symbol_range: Range(
    start: Position(
      offset: 0,
      line_col: (1, 1),
    ),
    end: Position(
      offset: 6,
      line_col: (1, 7),
    ),
  ),
)
