src/snapshots/aidl_parser__ast__tests__type_primitive1.snap
---
source: src/ast.rs
expression: "rules::type_(input, &lookup(input))?"

---
Type(
  name: "double",
  kind: Primitive,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
