src/snapshots/aidl_parser__ast__tests__type_primitive2.snap
---
source: src/ast.rs
expression: "rules::type_(input, &lookup(input))?"

---
Type(
  name: "doublegum",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
